feat: Handle async project tasks
