# docs/svc/openapi.yaml
@@ -92,6 +92,8 @@ components:
                     type: string
                 source_type:
                     type: string
+                status:
+                    type: string
                 updated_at:
                     type: string
             type: object
@@ -176,6 +178,8 @@ components:
                 name:
                     type: string
                 source_type:
+                    type: string
+                status:
                     type: string
                 updated_at:
                     type: string
@@ -341,21 +345,13 @@ components:
             type: object
         UploadProjectResponse:
             properties:
-                direct_deps:
-                    type: integer
                 id:
                     format: int32
                     type: integer
                 name:
                     type: string
-                skipped:
-                    type: integer
-                source_type:
+                status:
                     type: string
-                total_deps:
-                    type: integer
-                transitive_deps:
-                    type: integer
             type: object
 info:
     description: API for querying package information and metadata
